' Copyright (C) 2023 - present Juergen Zimmermann, Hochschule Karlsruhe
' Copyright (C) 2023 - present Botan Coban
'
' This program is free software: you can redistribute it and/or modify
' it under the terms of the GNU General Public License as published by
' the Free Software Foundation, either version 3 of the License, or
' (at your option) any later version.
'
' This program is distributed in the hope that it will be useful,
' but WITHOUT ANY WARRANTY; without even the implied warranty of
' MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
' GNU General Public License for more details.
'
' You should have received a copy of the GNU General Public License
' along with this program.  If not, see <https://www.gnu.org/licenses/>.

' Preview durch <Alt>d

@startuml ER Diagramm

' hide the spot
hide circle

' evtl. Probleme mit Kraehenfuessen vermeiden
skinparam linetype ortho

entity "Universitaet" {
  * id: integer <<generated>>
  --
  * version: integer
  * name: text
  * standort: text
  * anzahlStudierende: integer
  * homepage: text
  * gegruendet: integer
  * fakultaeten: text
  * ranking: integer
  * erzeugt: timestamp
  * aktualisiert: timestamp
}

entity "Bibliothek" {
  * id: integer <<generated>>
  --
  * name: text
  * isil: text
  * **universitaet_id**: integer <<FK>>
}

entity "Kurs" {
  * id: integer <<generated>>
  --
  * titel: text
  * startDatum: date
  * **universitaet_id**: integer <<FK>>
}

Universitaet ||..|| Bibliothek
Universitaet ||--o{ Kurs

footer (c) Botan Coban

@enduml
